fixing bozeman scanning issue

--- a/YellowstonePathology/app.config
+++ b/YellowstonePathology/app.config
@@ -54,7 +54,7 @@
                 <value>\\\\cfileserver\\documents\\Dictation\\</value>
             </setting>
             <setting name="MySqlConnectionString" serializeAs="String">
-                <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</value>
+                <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis; Pooling=True;</value>
             </setting>
         </YellowstonePathology.Properties.Settings>
         <YellowstonePathology.UI.Properties.Settings>
@@ -102,7 +102,7 @@
   <userSettings>
     <YellowstonePathology.Properties.Settings>
       <setting name="CurrentConnectionString" serializeAs="String">
-        <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</value>
+        <value>Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis; Pooling=True;</value>
       </setting>
       <setting name="ChangeDBPassword" serializeAs="String">
         <value>changedb</value>
