--- a/YellowstonePathology/Properties/Settings.settings
+++ b/YellowstonePathology/Properties/Settings.settings
@@ -39,7 +39,7 @@
       <Value Profile="(Default)">\\ypiidc\YPIILIS\Dictionary\ypi-custom.aff</Value>
     </Setting>
     <Setting Name="CurrentConnectionString" Type="System.String" Scope="User">
-      <Value Profile="(Default)">Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</Value>
+      <Value Profile="(Default)">Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis; Pooling=True;</Value>
     </Setting>
     <Setting Name="ChangeDBPassword" Type="System.String" Scope="User">
       <Value Profile="(Default)">changedb</Value>
@@ -51,7 +51,7 @@
       <Value Profile="(Default)">\\\\cfileserver\\documents\\Dictation\\</Value>
     </Setting>
     <Setting Name="MySqlConnectionString" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis;</Value>
+      <Value Profile="(Default)">Server = 10.1.2.26; Uid = sqldude; Pwd = 123Whatsup; Database = lis; Pooling=True;</Value>
     </Setting>
     <Setting Name="SqlServerConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)">Data Source=TestSQL;Initial Catalog=YPIData;Integrated Security=True</Value>
