Move Client delete button to context menu, add Fedx button and dialog

--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -3163,6 +3163,9 @@
     <Compile Include="UI\BrowserWindow.xaml.cs">
       <DependentUpon>BrowserWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UI\Client\ClientFedxDialog.xaml.cs">
+      <DependentUpon>ClientFedxDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UI\Client\ClientLookupDialog.xaml.cs">
       <DependentUpon>ClientLookupDialog.xaml</DependentUpon>
     </Compile>
@@ -5177,6 +5180,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="UI\ClientOrderWorkspace.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UI\Client\ClientFedxDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
