--- a/YellowstonePathology/UserInterface.csproj
+++ b/YellowstonePathology/UserInterface.csproj
@@ -1066,6 +1066,10 @@
     <Compile Include="Business\Test\ExtractAndHoldForPreauthorization\ExtractAndHoldForPreauthorizationWordDocument.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonMSH6Loss.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEColonPMS2Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEColonMLH1Loss.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResult.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultIntactExpression.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultLossOfExpression.cs" />
     <Compile Include="Business\Test\MPNExtendedReflexPanel\MPNExtendedReflexPanelTest.cs" />
     <Compile Include="Business\Test\BCellEnumeration\BCellEnumerationCMMCNTEView.cs" />
     <Compile Include="Business\Test\BCellEnumeration\BCellEnumerationWPHOBXView.cs" />
@@ -2695,19 +2699,9 @@
     <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult1.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult2.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEGYNResult3.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResult.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultIntactExpression.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEIHCResultLossOfExpression.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResult.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultCollection.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSERule.cs" />
+    <Compile Include="Business\Test\LynchSyndrome\LSERuleCollection.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEResultEnum.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatus.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusBRAFRequired.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusCollection.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusCompleteAfterMSI.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusMethylationAnalysisRequired.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusMethylationAnalysisRequiredGYN.cs" />
-    <Compile Include="Business\Test\LynchSyndrome\LSEResultStatusNotSet.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSEType.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LSETypeCollection.cs" />
     <Compile Include="Business\Test\LynchSyndrome\LynchSyndromeEvaluationCMMCNteView.cs" />
